# apn_api/controllers/company/controllers_branch.py
@@ -19,7 +19,7 @@ _logger = logging.getLogger(__name__)
 class BranchAPIController(BaseAPIController):
 
     @http.route('/api_pilates/v1/branches', type='http', auth='public', methods=['GET'], csrf=False)
-    def get_branches(self):
+    def get_branches(self, **kwargs):
         try:
             data = (
                 request.env["res.company"].sudo().search_read(
@@ -44,9 +44,21 @@ class BranchAPIController(BaseAPIController):
                         "room_count",
                         "rooms",
                         "schedules",
+                        "logo",
                     ],
                 )
             )
+            base_url = (
+                request.env["ir.config_parameter"].sudo().get_param("web.base.url")
+            )
+            for branch in data:
+                if branch.get('logo',False):
+                    branch['logo'] = True
+                    branch['logo_url'] = f"{base_url}/public/image/branch/{branch['id']}"
+                else:
+                    branch['logo'] = False
+                    branch['logo_url'] = None
+
             answer = {
                 "status": "success",
                 "message": "Datos obtenidos correctamente",
